Práctica4/test/y.output
Estado 39 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: Principal $end

    1 Principal: PRINCIPAL bloque

    2 $@1: %empty

    3 bloque: INICIO_BLOQUE $@1 Declar_de_var_locales Declar_de_subprogs Resto_bloque

    4 Resto_bloque: Sentencias FIN_BLOQUE
    5             | FIN_BLOQUE

    6 Declar_de_var_locales: MARCA_INICIO_VAR Variables_locales MARCA_FIN_VAR
    7                      | %empty

    8 Variables_locales: Variables_locales Cuerpo_declar_var
    9                  | Cuerpo_declar_var

   10 Cuerpo_declar_var: tipo linea_variables PYC
   11                  | tipo linea_variables error

   12 tipo: TIPO
   13     | error

   14 linea_variables: linea_variables COMA variable
   15                | variable

   16 variable: ID
   17         | Array

   18 Array: ID CORCHETE_IZQ expresion CORCHETE_DER
   19      | ID CORCHETE_IZQ expresion COMA expresion CORCHETE_DER

   20 Identificadores: Identificadores COMA ID
   21                | ID
   22                | error

   23 Declar_de_subprogs: Declar_de_subprogs Declar_subprog
   24                   | %empty

   25 $@2: %empty

   26 $@3: %empty

   27 Declar_subprog: PROCEDIMIENTO ID $@2 PARENT_IZQ Parametros $@3 PARENT_DER bloque

   28 Parametros: Parametros COMA Parametro
   29           | Parametro
   30           | %empty

   31 Parametro: TIPO ID
   32          | TIPO ID CORCHETE_IZQ CORCHETE_DER
   33          | TIPO ID CORCHETE_IZQ CORCHETE_DER CORCHETE_IZQ CORCHETE_DER
   34          | error

   35 Sentencias: Sentencias Sentencia
   36           | Sentencia

   37 Sentencia: bloque
   38          | sentencia_asignacion
   39          | sentencia_si
   40          | sentencia_mientras
   41          | sentencia_hacer
   42          | sentencia_entrada
   43          | sentencia_salida
   44          | llamada_proced

   45 sentencia_asignacion: Ide_exp OP_ASIG expresion PYC

   46 Ide_exp: ID
   47        | Array_exp

   48 Array_exp: ID CORCHETE_IZQ expresion CORCHETE_DER
   49          | ID CORCHETE_IZQ expresion COMA expresion CORCHETE_DER

   50 sentencia_si: si
   51             | si SINO Sentencia

   52 si: SI PARENT_IZQ expresion PARENT_DER ENTONCES Sentencia

   53 sentencia_mientras: MIENTRAS PARENT_IZQ expresion PARENT_DER Sentencia

   54 sentencia_hacer: HACER bloque HASTA PARENT_IZQ expresion PARENT_DER PYC

   55 sentencia_entrada: ENTRADA Identificadores PYC

   56 sentencia_salida: SALIDA lista_exp_cadena PYC

   57 lista_exp_cadena: lista_exp_cadena COMA exp_cadena
   58                 | exp_cadena

   59 exp_cadena: expresion
   60           | CADENA

   61 llamada_proced: ID PARENT_IZQ argumentos PARENT_DER PYC
   62               | ID PARENT_IZQ PARENT_DER PYC
   63               | error

   64 argumentos: argumentos COMA expresion
   65           | expresion

   66 expresion: PARENT_IZQ expresion PARENT_DER
   67          | ID
   68          | Constante
   69          | OP_NOT expresion
   70          | MASMENOS expresion
   71          | expresion OP_OR expresion
   72          | expresion OP_AND expresion
   73          | expresion OP_XOR expresion
   74          | expresion OP_REL expresion
   75          | expresion OP_IGUALDAD expresion
   76          | expresion OP_MULT expresion
   77          | expresion MASMENOS expresion
   78          | Array_exp
   79          | Agregados
   80          | error

   81 Agregados: INICIO_BLOQUE argumentos FIN_BLOQUE
   82          | INICIO_BLOQUE argumentos PYC argumentos FIN_BLOQUE

   83 Constante: CONSTANTE
   84          | NATURAL


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 11 13 22 34 63 80
MARCA_INICIO_VAR (258) 6
MARCA_FIN_VAR (259) 6
PRINCIPAL (260) 1
INICIO_BLOQUE (261) 3 81 82
FIN_BLOQUE (262) 4 5 81 82
COMA (263) 14 19 20 28 49 57 64
ID (264) 16 18 19 20 21 27 31 32 33 46 48 49 61 62 67
TIPO (265) 12 31 32 33
PROCEDIMIENTO (266) 27
OP_ASIG (267) 45
SI (268) 52
ENTONCES (269) 52
SINO (270) 51
MIENTRAS (271) 53
HACER (272) 54
HASTA (273) 54
CONSTANTE (274) 83
NATURAL (275) 84
CADENA (276) 60
ENTRADA (277) 55
SALIDA (278) 56
PYC (279) 10 45 54 55 56 61 62 82
PARENT_IZQ (280) 27 52 53 54 61 62 66
PARENT_DER (281) 27 52 53 54 61 62 66
CORCHETE_IZQ (282) 18 19 32 33 48 49
CORCHETE_DER (283) 18 19 32 33 48 49
OP_OR (284) 71
OP_AND (285) 72
OP_XOR (286) 73
OP_IGUALDAD (287) 75
OP_REL (288) 74
MASMENOS (289) 70 77
OP_MULT (290) 76
OP_NOT (291) 69


No terminales con las reglas donde aparecen

$accept (37)
    en la izquierda: 0
Principal (38)
    en la izquierda: 1, en la derecha: 0
bloque (39)
    en la izquierda: 3, en la derecha: 1 27 37 54
$@1 (40)
    en la izquierda: 2, en la derecha: 3
Resto_bloque (41)
    en la izquierda: 4 5, en la derecha: 3
Declar_de_var_locales (42)
    en la izquierda: 6 7, en la derecha: 3
Variables_locales (43)
    en la izquierda: 8 9, en la derecha: 6 8
Cuerpo_declar_var (44)
    en la izquierda: 10 11, en la derecha: 8 9
tipo (45)
    en la izquierda: 12 13, en la derecha: 10 11
linea_variables (46)
    en la izquierda: 14 15, en la derecha: 10 11 14
variable (47)
    en la izquierda: 16 17, en la derecha: 14 15
Array (48)
    en la izquierda: 18 19, en la derecha: 17
Identificadores (49)
    en la izquierda: 20 21 22, en la derecha: 20 55
Declar_de_subprogs (50)
    en la izquierda: 23 24, en la derecha: 3 23
Declar_subprog (51)
    en la izquierda: 27, en la derecha: 23
$@2 (52)
    en la izquierda: 25, en la derecha: 27
$@3 (53)
    en la izquierda: 26, en la derecha: 27
Parametros (54)
    en la izquierda: 28 29 30, en la derecha: 27 28
Parametro (55)
    en la izquierda: 31 32 33 34, en la derecha: 28 29
Sentencias (56)
    en la izquierda: 35 36, en la derecha: 4 35
Sentencia (57)
    en la izquierda: 37 38 39 40 41 42 43 44, en la derecha: 35 36
    51 52 53
sentencia_asignacion (58)
    en la izquierda: 45, en la derecha: 38
Ide_exp (59)
    en la izquierda: 46 47, en la derecha: 45
Array_exp (60)
    en la izquierda: 48 49, en la derecha: 47 78
sentencia_si (61)
    en la izquierda: 50 51, en la derecha: 39
si (62)
    en la izquierda: 52, en la derecha: 50 51
sentencia_mientras (63)
    en la izquierda: 53, en la derecha: 40
sentencia_hacer (64)
    en la izquierda: 54, en la derecha: 41
sentencia_entrada (65)
    en la izquierda: 55, en la derecha: 42
sentencia_salida (66)
    en la izquierda: 56, en la derecha: 43
lista_exp_cadena (67)
    en la izquierda: 57 58, en la derecha: 56 57
exp_cadena (68)
    en la izquierda: 59 60, en la derecha: 57 58
llamada_proced (69)
    en la izquierda: 61 62 63, en la derecha: 44
argumentos (70)
    en la izquierda: 64 65, en la derecha: 61 64 81 82
expresion (71)
    en la izquierda: 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80,
    en la derecha: 18 19 45 48 49 52 53 54 59 64 65 66 69 70 71 72
    73 74 75 76 77
Agregados (72)
    en la izquierda: 81 82, en la derecha: 79
Constante (73)
    en la izquierda: 83 84, en la derecha: 68


Estado 0

    0 $accept: . Principal $end

    PRINCIPAL  desplazar e ir al estado 1

    Principal  ir al estado 2


Estado 1

    1 Principal: PRINCIPAL . bloque

    INICIO_BLOQUE  desplazar e ir al estado 3

    bloque  ir al estado 4


Estado 2

    0 $accept: Principal . $end

    $end  desplazar e ir al estado 5


Estado 3

    3 bloque: INICIO_BLOQUE . $@1 Declar_de_var_locales Declar_de_subprogs Resto_bloque

    $default  reduce usando la regla 2 ($@1)

    $@1  ir al estado 6


Estado 4

    1 Principal: PRINCIPAL bloque .

    $default  reduce usando la regla 1 (Principal)


Estado 5

    0 $accept: Principal $end .

    $default  aceptar


Estado 6

    3 bloque: INICIO_BLOQUE $@1 . Declar_de_var_locales Declar_de_subprogs Resto_bloque

    MARCA_INICIO_VAR  desplazar e ir al estado 7

    $default  reduce usando la regla 7 (Declar_de_var_locales)

    Declar_de_var_locales  ir al estado 8


Estado 7

    6 Declar_de_var_locales: MARCA_INICIO_VAR . Variables_locales MARCA_FIN_VAR

    error  desplazar e ir al estado 9
    TIPO   desplazar e ir al estado 10

    Variables_locales  ir al estado 11
    Cuerpo_declar_var  ir al estado 12
    tipo               ir al estado 13


Estado 8

    3 bloque: INICIO_BLOQUE $@1 Declar_de_var_locales . Declar_de_subprogs Resto_bloque

    $default  reduce usando la regla 24 (Declar_de_subprogs)

    Declar_de_subprogs  ir al estado 14


Estado 9

   13 tipo: error .

    $default  reduce usando la regla 13 (tipo)


Estado 10

   12 tipo: TIPO .

    $default  reduce usando la regla 12 (tipo)


Estado 11

    6 Declar_de_var_locales: MARCA_INICIO_VAR Variables_locales . MARCA_FIN_VAR
    8 Variables_locales: Variables_locales . Cuerpo_declar_var

    error          desplazar e ir al estado 9
    MARCA_FIN_VAR  desplazar e ir al estado 15
    TIPO           desplazar e ir al estado 10

    Cuerpo_declar_var  ir al estado 16
    tipo               ir al estado 13


Estado 12

    9 Variables_locales: Cuerpo_declar_var .

    $default  reduce usando la regla 9 (Variables_locales)


Estado 13

   10 Cuerpo_declar_var: tipo . linea_variables PYC
   11                  | tipo . linea_variables error

    ID  desplazar e ir al estado 17

    linea_variables  ir al estado 18
    variable         ir al estado 19
    Array            ir al estado 20


Estado 14

    3 bloque: INICIO_BLOQUE $@1 Declar_de_var_locales Declar_de_subprogs . Resto_bloque
   23 Declar_de_subprogs: Declar_de_subprogs . Declar_subprog

    error          desplazar e ir al estado 21
    INICIO_BLOQUE  desplazar e ir al estado 3
    FIN_BLOQUE     desplazar e ir al estado 22
    ID             desplazar e ir al estado 23
    PROCEDIMIENTO  desplazar e ir al estado 24
    SI             desplazar e ir al estado 25
    MIENTRAS       desplazar e ir al estado 26
    HACER          desplazar e ir al estado 27
    ENTRADA        desplazar e ir al estado 28
    SALIDA         desplazar e ir al estado 29

    bloque                ir al estado 30
    Resto_bloque          ir al estado 31
    Declar_subprog        ir al estado 32
    Sentencias            ir al estado 33
    Sentencia             ir al estado 34
    sentencia_asignacion  ir al estado 35
    Ide_exp               ir al estado 36
    Array_exp             ir al estado 37
    sentencia_si          ir al estado 38
    si                    ir al estado 39
    sentencia_mientras    ir al estado 40
    sentencia_hacer       ir al estado 41
    sentencia_entrada     ir al estado 42
    sentencia_salida      ir al estado 43
    llamada_proced        ir al estado 44


Estado 15

    6 Declar_de_var_locales: MARCA_INICIO_VAR Variables_locales MARCA_FIN_VAR .

    $default  reduce usando la regla 6 (Declar_de_var_locales)


Estado 16

    8 Variables_locales: Variables_locales Cuerpo_declar_var .

    $default  reduce usando la regla 8 (Variables_locales)


Estado 17

   16 variable: ID .
   18 Array: ID . CORCHETE_IZQ expresion CORCHETE_DER
   19      | ID . CORCHETE_IZQ expresion COMA expresion CORCHETE_DER

    CORCHETE_IZQ  desplazar e ir al estado 45

    $default  reduce usando la regla 16 (variable)


Estado 18

   10 Cuerpo_declar_var: tipo linea_variables . PYC
   11                  | tipo linea_variables . error
   14 linea_variables: linea_variables . COMA variable

    error  desplazar e ir al estado 46
    COMA   desplazar e ir al estado 47
    PYC    desplazar e ir al estado 48


Estado 19

   15 linea_variables: variable .

    $default  reduce usando la regla 15 (linea_variables)


Estado 20

   17 variable: Array .

    $default  reduce usando la regla 17 (variable)


Estado 21

   63 llamada_proced: error .

    $default  reduce usando la regla 63 (llamada_proced)


Estado 22

    5 Resto_bloque: FIN_BLOQUE .

    $default  reduce usando la regla 5 (Resto_bloque)


Estado 23

   46 Ide_exp: ID .
   48 Array_exp: ID . CORCHETE_IZQ expresion CORCHETE_DER
   49          | ID . CORCHETE_IZQ expresion COMA expresion CORCHETE_DER
   61 llamada_proced: ID . PARENT_IZQ argumentos PARENT_DER PYC
   62               | ID . PARENT_IZQ PARENT_DER PYC

    PARENT_IZQ    desplazar e ir al estado 49
    CORCHETE_IZQ  desplazar e ir al estado 50

    $default  reduce usando la regla 46 (Ide_exp)


Estado 24

   27 Declar_subprog: PROCEDIMIENTO . ID $@2 PARENT_IZQ Parametros $@3 PARENT_DER bloque

    ID  desplazar e ir al estado 51


Estado 25

   52 si: SI . PARENT_IZQ expresion PARENT_DER ENTONCES Sentencia

    PARENT_IZQ  desplazar e ir al estado 52


Estado 26

   53 sentencia_mientras: MIENTRAS . PARENT_IZQ expresion PARENT_DER Sentencia

    PARENT_IZQ  desplazar e ir al estado 53


Estado 27

   54 sentencia_hacer: HACER . bloque HASTA PARENT_IZQ expresion PARENT_DER PYC

    INICIO_BLOQUE  desplazar e ir al estado 3

    bloque  ir al estado 54


Estado 28

   55 sentencia_entrada: ENTRADA . Identificadores PYC

    error  desplazar e ir al estado 55
    ID     desplazar e ir al estado 56

    Identificadores  ir al estado 57


Estado 29

   56 sentencia_salida: SALIDA . lista_exp_cadena PYC

    error          desplazar e ir al estado 58
    INICIO_BLOQUE  desplazar e ir al estado 59
    ID             desplazar e ir al estado 60
    CONSTANTE      desplazar e ir al estado 61
    NATURAL        desplazar e ir al estado 62
    CADENA         desplazar e ir al estado 63
    PARENT_IZQ     desplazar e ir al estado 64
    MASMENOS       desplazar e ir al estado 65
    OP_NOT         desplazar e ir al estado 66

    Array_exp         ir al estado 67
    lista_exp_cadena  ir al estado 68
    exp_cadena        ir al estado 69
    expresion         ir al estado 70
    Agregados         ir al estado 71
    Constante         ir al estado 72


Estado 30

   37 Sentencia: bloque .

    $default  reduce usando la regla 37 (Sentencia)


Estado 31

    3 bloque: INICIO_BLOQUE $@1 Declar_de_var_locales Declar_de_subprogs Resto_bloque .

    $default  reduce usando la regla 3 (bloque)


Estado 32

   23 Declar_de_subprogs: Declar_de_subprogs Declar_subprog .

    $default  reduce usando la regla 23 (Declar_de_subprogs)


Estado 33

    4 Resto_bloque: Sentencias . FIN_BLOQUE
   35 Sentencias: Sentencias . Sentencia

    error          desplazar e ir al estado 21
    INICIO_BLOQUE  desplazar e ir al estado 3
    FIN_BLOQUE     desplazar e ir al estado 73
    ID             desplazar e ir al estado 23
    SI             desplazar e ir al estado 25
    MIENTRAS       desplazar e ir al estado 26
    HACER          desplazar e ir al estado 27
    ENTRADA        desplazar e ir al estado 28
    SALIDA         desplazar e ir al estado 29

    bloque                ir al estado 30
    Sentencia             ir al estado 74
    sentencia_asignacion  ir al estado 35
    Ide_exp               ir al estado 36
    Array_exp             ir al estado 37
    sentencia_si          ir al estado 38
    si                    ir al estado 39
    sentencia_mientras    ir al estado 40
    sentencia_hacer       ir al estado 41
    sentencia_entrada     ir al estado 42
    sentencia_salida      ir al estado 43
    llamada_proced        ir al estado 44


Estado 34

   36 Sentencias: Sentencia .

    $default  reduce usando la regla 36 (Sentencias)


Estado 35

   38 Sentencia: sentencia_asignacion .

    $default  reduce usando la regla 38 (Sentencia)


Estado 36

   45 sentencia_asignacion: Ide_exp . OP_ASIG expresion PYC

    OP_ASIG  desplazar e ir al estado 75


Estado 37

   47 Ide_exp: Array_exp .

    $default  reduce usando la regla 47 (Ide_exp)


Estado 38

   39 Sentencia: sentencia_si .

    $default  reduce usando la regla 39 (Sentencia)


Estado 39

   50 sentencia_si: si .
   51             | si . SINO Sentencia

    SINO  desplazar e ir al estado 76

    SINO      [reduce usando la regla 50 (sentencia_si)]
    $default  reduce usando la regla 50 (sentencia_si)


Estado 40

   40 Sentencia: sentencia_mientras .

    $default  reduce usando la regla 40 (Sentencia)


Estado 41

   41 Sentencia: sentencia_hacer .

    $default  reduce usando la regla 41 (Sentencia)


Estado 42

   42 Sentencia: sentencia_entrada .

    $default  reduce usando la regla 42 (Sentencia)


Estado 43

   43 Sentencia: sentencia_salida .

    $default  reduce usando la regla 43 (Sentencia)


Estado 44

   44 Sentencia: llamada_proced .

    $default  reduce usando la regla 44 (Sentencia)


Estado 45

   18 Array: ID CORCHETE_IZQ . expresion CORCHETE_DER
   19      | ID CORCHETE_IZQ . expresion COMA expresion CORCHETE_DER

    error          desplazar e ir al estado 58
    INICIO_BLOQUE  desplazar e ir al estado 59
    ID             desplazar e ir al estado 60
    CONSTANTE      desplazar e ir al estado 61
    NATURAL        desplazar e ir al estado 62
    PARENT_IZQ     desplazar e ir al estado 64
    MASMENOS       desplazar e ir al estado 65
    OP_NOT         desplazar e ir al estado 66

    Array_exp  ir al estado 67
    expresion  ir al estado 77
    Agregados  ir al estado 71
    Constante  ir al estado 72


Estado 46

   11 Cuerpo_declar_var: tipo linea_variables error .

    $default  reduce usando la regla 11 (Cuerpo_declar_var)


Estado 47

   14 linea_variables: linea_variables COMA . variable

    ID  desplazar e ir al estado 17

    variable  ir al estado 78
    Array     ir al estado 20


Estado 48

   10 Cuerpo_declar_var: tipo linea_variables PYC .

    $default  reduce usando la regla 10 (Cuerpo_declar_var)


Estado 49

   61 llamada_proced: ID PARENT_IZQ . argumentos PARENT_DER PYC
   62               | ID PARENT_IZQ . PARENT_DER PYC

    error          desplazar e ir al estado 58
    INICIO_BLOQUE  desplazar e ir al estado 59
    ID             desplazar e ir al estado 60
    CONSTANTE      desplazar e ir al estado 61
    NATURAL        desplazar e ir al estado 62
    PARENT_IZQ     desplazar e ir al estado 64
    PARENT_DER     desplazar e ir al estado 79
    MASMENOS       desplazar e ir al estado 65
    OP_NOT         desplazar e ir al estado 66

    Array_exp   ir al estado 67
    argumentos  ir al estado 80
    expresion   ir al estado 81
    Agregados   ir al estado 71
    Constante   ir al estado 72


Estado 50

   48 Array_exp: ID CORCHETE_IZQ . expresion CORCHETE_DER
   49          | ID CORCHETE_IZQ . expresion COMA expresion CORCHETE_DER

    error          desplazar e ir al estado 58
    INICIO_BLOQUE  desplazar e ir al estado 59
    ID             desplazar e ir al estado 60
    CONSTANTE      desplazar e ir al estado 61
    NATURAL        desplazar e ir al estado 62
    PARENT_IZQ     desplazar e ir al estado 64
    MASMENOS       desplazar e ir al estado 65
    OP_NOT         desplazar e ir al estado 66

    Array_exp  ir al estado 67
    expresion  ir al estado 82
    Agregados  ir al estado 71
    Constante  ir al estado 72


Estado 51

   27 Declar_subprog: PROCEDIMIENTO ID . $@2 PARENT_IZQ Parametros $@3 PARENT_DER bloque

    $default  reduce usando la regla 25 ($@2)

    $@2  ir al estado 83


Estado 52

   52 si: SI PARENT_IZQ . expresion PARENT_DER ENTONCES Sentencia

    error          desplazar e ir al estado 58
    INICIO_BLOQUE  desplazar e ir al estado 59
    ID             desplazar e ir al estado 60
    CONSTANTE      desplazar e ir al estado 61
    NATURAL        desplazar e ir al estado 62
    PARENT_IZQ     desplazar e ir al estado 64
    MASMENOS       desplazar e ir al estado 65
    OP_NOT         desplazar e ir al estado 66

    Array_exp  ir al estado 67
    expresion  ir al estado 84
    Agregados  ir al estado 71
    Constante  ir al estado 72


Estado 53

   53 sentencia_mientras: MIENTRAS PARENT_IZQ . expresion PARENT_DER Sentencia

    error          desplazar e ir al estado 58
    INICIO_BLOQUE  desplazar e ir al estado 59
    ID             desplazar e ir al estado 60
    CONSTANTE      desplazar e ir al estado 61
    NATURAL        desplazar e ir al estado 62
    PARENT_IZQ     desplazar e ir al estado 64
    MASMENOS       desplazar e ir al estado 65
    OP_NOT         desplazar e ir al estado 66

    Array_exp  ir al estado 67
    expresion  ir al estado 85
    Agregados  ir al estado 71
    Constante  ir al estado 72


Estado 54

   54 sentencia_hacer: HACER bloque . HASTA PARENT_IZQ expresion PARENT_DER PYC

    HASTA  desplazar e ir al estado 86


Estado 55

   22 Identificadores: error .

    $default  reduce usando la regla 22 (Identificadores)


Estado 56

   21 Identificadores: ID .

    $default  reduce usando la regla 21 (Identificadores)


Estado 57

   20 Identificadores: Identificadores . COMA ID
   55 sentencia_entrada: ENTRADA Identificadores . PYC

    COMA  desplazar e ir al estado 87
    PYC   desplazar e ir al estado 88


Estado 58

   80 expresion: error .

    $default  reduce usando la regla 80 (expresion)


Estado 59

   81 Agregados: INICIO_BLOQUE . argumentos FIN_BLOQUE
   82          | INICIO_BLOQUE . argumentos PYC argumentos FIN_BLOQUE

    error          desplazar e ir al estado 58
    INICIO_BLOQUE  desplazar e ir al estado 59
    ID             desplazar e ir al estado 60
    CONSTANTE      desplazar e ir al estado 61
    NATURAL        desplazar e ir al estado 62
    PARENT_IZQ     desplazar e ir al estado 64
    MASMENOS       desplazar e ir al estado 65
    OP_NOT         desplazar e ir al estado 66

    Array_exp   ir al estado 67
    argumentos  ir al estado 89
    expresion   ir al estado 81
    Agregados   ir al estado 71
    Constante   ir al estado 72


Estado 60

   48 Array_exp: ID . CORCHETE_IZQ expresion CORCHETE_DER
   49          | ID . CORCHETE_IZQ expresion COMA expresion CORCHETE_DER
   67 expresion: ID .

    CORCHETE_IZQ  desplazar e ir al estado 50

    $default  reduce usando la regla 67 (expresion)


Estado 61

   83 Constante: CONSTANTE .

    $default  reduce usando la regla 83 (Constante)


Estado 62

   84 Constante: NATURAL .

    $default  reduce usando la regla 84 (Constante)


Estado 63

   60 exp_cadena: CADENA .

    $default  reduce usando la regla 60 (exp_cadena)


Estado 64

   66 expresion: PARENT_IZQ . expresion PARENT_DER

    error          desplazar e ir al estado 58
    INICIO_BLOQUE  desplazar e ir al estado 59
    ID             desplazar e ir al estado 60
    CONSTANTE      desplazar e ir al estado 61
    NATURAL        desplazar e ir al estado 62
    PARENT_IZQ     desplazar e ir al estado 64
    MASMENOS       desplazar e ir al estado 65
    OP_NOT         desplazar e ir al estado 66

    Array_exp  ir al estado 67
    expresion  ir al estado 90
    Agregados  ir al estado 71
    Constante  ir al estado 72


Estado 65

   70 expresion: MASMENOS . expresion

    error          desplazar e ir al estado 58
    INICIO_BLOQUE  desplazar e ir al estado 59
    ID             desplazar e ir al estado 60
    CONSTANTE      desplazar e ir al estado 61
    NATURAL        desplazar e ir al estado 62
    PARENT_IZQ     desplazar e ir al estado 64
    MASMENOS       desplazar e ir al estado 65
    OP_NOT         desplazar e ir al estado 66

    Array_exp  ir al estado 67
    expresion  ir al estado 91
    Agregados  ir al estado 71
    Constante  ir al estado 72


Estado 66

   69 expresion: OP_NOT . expresion

    error          desplazar e ir al estado 58
    INICIO_BLOQUE  desplazar e ir al estado 59
    ID             desplazar e ir al estado 60
    CONSTANTE      desplazar e ir al estado 61
    NATURAL        desplazar e ir al estado 62
    PARENT_IZQ     desplazar e ir al estado 64
    MASMENOS       desplazar e ir al estado 65
    OP_NOT         desplazar e ir al estado 66

    Array_exp  ir al estado 67
    expresion  ir al estado 92
    Agregados  ir al estado 71
    Constante  ir al estado 72


Estado 67

   78 expresion: Array_exp .

    $default  reduce usando la regla 78 (expresion)


Estado 68

   56 sentencia_salida: SALIDA lista_exp_cadena . PYC
   57 lista_exp_cadena: lista_exp_cadena . COMA exp_cadena

    COMA  desplazar e ir al estado 93
    PYC   desplazar e ir al estado 94


Estado 69

   58 lista_exp_cadena: exp_cadena .

    $default  reduce usando la regla 58 (lista_exp_cadena)


Estado 70

   59 exp_cadena: expresion .
   71 expresion: expresion . OP_OR expresion
   72          | expresion . OP_AND expresion
   73          | expresion . OP_XOR expresion
   74          | expresion . OP_REL expresion
   75          | expresion . OP_IGUALDAD expresion
   76          | expresion . OP_MULT expresion
   77          | expresion . MASMENOS expresion

    OP_OR        desplazar e ir al estado 95
    OP_AND       desplazar e ir al estado 96
    OP_XOR       desplazar e ir al estado 97
    OP_IGUALDAD  desplazar e ir al estado 98
    OP_REL       desplazar e ir al estado 99
    MASMENOS     desplazar e ir al estado 100
    OP_MULT      desplazar e ir al estado 101

    $default  reduce usando la regla 59 (exp_cadena)


Estado 71

   79 expresion: Agregados .

    $default  reduce usando la regla 79 (expresion)


Estado 72

   68 expresion: Constante .

    $default  reduce usando la regla 68 (expresion)


Estado 73

    4 Resto_bloque: Sentencias FIN_BLOQUE .

    $default  reduce usando la regla 4 (Resto_bloque)


Estado 74

   35 Sentencias: Sentencias Sentencia .

    $default  reduce usando la regla 35 (Sentencias)


Estado 75

   45 sentencia_asignacion: Ide_exp OP_ASIG . expresion PYC

    error          desplazar e ir al estado 58
    INICIO_BLOQUE  desplazar e ir al estado 59
    ID             desplazar e ir al estado 60
    CONSTANTE      desplazar e ir al estado 61
    NATURAL        desplazar e ir al estado 62
    PARENT_IZQ     desplazar e ir al estado 64
    MASMENOS       desplazar e ir al estado 65
    OP_NOT         desplazar e ir al estado 66

    Array_exp  ir al estado 67
    expresion  ir al estado 102
    Agregados  ir al estado 71
    Constante  ir al estado 72


Estado 76

   51 sentencia_si: si SINO . Sentencia

    error          desplazar e ir al estado 21
    INICIO_BLOQUE  desplazar e ir al estado 3
    ID             desplazar e ir al estado 23
    SI             desplazar e ir al estado 25
    MIENTRAS       desplazar e ir al estado 26
    HACER          desplazar e ir al estado 27
    ENTRADA        desplazar e ir al estado 28
    SALIDA         desplazar e ir al estado 29

    bloque                ir al estado 30
    Sentencia             ir al estado 103
    sentencia_asignacion  ir al estado 35
    Ide_exp               ir al estado 36
    Array_exp             ir al estado 37
    sentencia_si          ir al estado 38
    si                    ir al estado 39
    sentencia_mientras    ir al estado 40
    sentencia_hacer       ir al estado 41
    sentencia_entrada     ir al estado 42
    sentencia_salida      ir al estado 43
    llamada_proced        ir al estado 44


Estado 77

   18 Array: ID CORCHETE_IZQ expresion . CORCHETE_DER
   19      | ID CORCHETE_IZQ expresion . COMA expresion CORCHETE_DER
   71 expresion: expresion . OP_OR expresion
   72          | expresion . OP_AND expresion
   73          | expresion . OP_XOR expresion
   74          | expresion . OP_REL expresion
   75          | expresion . OP_IGUALDAD expresion
   76          | expresion . OP_MULT expresion
   77          | expresion . MASMENOS expresion

    COMA          desplazar e ir al estado 104
    CORCHETE_DER  desplazar e ir al estado 105
    OP_OR         desplazar e ir al estado 95
    OP_AND        desplazar e ir al estado 96
    OP_XOR        desplazar e ir al estado 97
    OP_IGUALDAD   desplazar e ir al estado 98
    OP_REL        desplazar e ir al estado 99
    MASMENOS      desplazar e ir al estado 100
    OP_MULT       desplazar e ir al estado 101


Estado 78

   14 linea_variables: linea_variables COMA variable .

    $default  reduce usando la regla 14 (linea_variables)


Estado 79

   62 llamada_proced: ID PARENT_IZQ PARENT_DER . PYC

    PYC  desplazar e ir al estado 106


Estado 80

   61 llamada_proced: ID PARENT_IZQ argumentos . PARENT_DER PYC
   64 argumentos: argumentos . COMA expresion

    COMA        desplazar e ir al estado 107
    PARENT_DER  desplazar e ir al estado 108


Estado 81

   65 argumentos: expresion .
   71 expresion: expresion . OP_OR expresion
   72          | expresion . OP_AND expresion
   73          | expresion . OP_XOR expresion
   74          | expresion . OP_REL expresion
   75          | expresion . OP_IGUALDAD expresion
   76          | expresion . OP_MULT expresion
   77          | expresion . MASMENOS expresion

    OP_OR        desplazar e ir al estado 95
    OP_AND       desplazar e ir al estado 96
    OP_XOR       desplazar e ir al estado 97
    OP_IGUALDAD  desplazar e ir al estado 98
    OP_REL       desplazar e ir al estado 99
    MASMENOS     desplazar e ir al estado 100
    OP_MULT      desplazar e ir al estado 101

    $default  reduce usando la regla 65 (argumentos)


Estado 82

   48 Array_exp: ID CORCHETE_IZQ expresion . CORCHETE_DER
   49          | ID CORCHETE_IZQ expresion . COMA expresion CORCHETE_DER
   71 expresion: expresion . OP_OR expresion
   72          | expresion . OP_AND expresion
   73          | expresion . OP_XOR expresion
   74          | expresion . OP_REL expresion
   75          | expresion . OP_IGUALDAD expresion
   76          | expresion . OP_MULT expresion
   77          | expresion . MASMENOS expresion

    COMA          desplazar e ir al estado 109
    CORCHETE_DER  desplazar e ir al estado 110
    OP_OR         desplazar e ir al estado 95
    OP_AND        desplazar e ir al estado 96
    OP_XOR        desplazar e ir al estado 97
    OP_IGUALDAD   desplazar e ir al estado 98
    OP_REL        desplazar e ir al estado 99
    MASMENOS      desplazar e ir al estado 100
    OP_MULT       desplazar e ir al estado 101


Estado 83

   27 Declar_subprog: PROCEDIMIENTO ID $@2 . PARENT_IZQ Parametros $@3 PARENT_DER bloque

    PARENT_IZQ  desplazar e ir al estado 111


Estado 84

   52 si: SI PARENT_IZQ expresion . PARENT_DER ENTONCES Sentencia
   71 expresion: expresion . OP_OR expresion
   72          | expresion . OP_AND expresion
   73          | expresion . OP_XOR expresion
   74          | expresion . OP_REL expresion
   75          | expresion . OP_IGUALDAD expresion
   76          | expresion . OP_MULT expresion
   77          | expresion . MASMENOS expresion

    PARENT_DER   desplazar e ir al estado 112
    OP_OR        desplazar e ir al estado 95
    OP_AND       desplazar e ir al estado 96
    OP_XOR       desplazar e ir al estado 97
    OP_IGUALDAD  desplazar e ir al estado 98
    OP_REL       desplazar e ir al estado 99
    MASMENOS     desplazar e ir al estado 100
    OP_MULT      desplazar e ir al estado 101


Estado 85

   53 sentencia_mientras: MIENTRAS PARENT_IZQ expresion . PARENT_DER Sentencia
   71 expresion: expresion . OP_OR expresion
   72          | expresion . OP_AND expresion
   73          | expresion . OP_XOR expresion
   74          | expresion . OP_REL expresion
   75          | expresion . OP_IGUALDAD expresion
   76          | expresion . OP_MULT expresion
   77          | expresion . MASMENOS expresion

    PARENT_DER   desplazar e ir al estado 113
    OP_OR        desplazar e ir al estado 95
    OP_AND       desplazar e ir al estado 96
    OP_XOR       desplazar e ir al estado 97
    OP_IGUALDAD  desplazar e ir al estado 98
    OP_REL       desplazar e ir al estado 99
    MASMENOS     desplazar e ir al estado 100
    OP_MULT      desplazar e ir al estado 101


Estado 86

   54 sentencia_hacer: HACER bloque HASTA . PARENT_IZQ expresion PARENT_DER PYC

    PARENT_IZQ  desplazar e ir al estado 114


Estado 87

   20 Identificadores: Identificadores COMA . ID

    ID  desplazar e ir al estado 115


Estado 88

   55 sentencia_entrada: ENTRADA Identificadores PYC .

    $default  reduce usando la regla 55 (sentencia_entrada)


Estado 89
